kubernetes/kubernetes/5-nextcloud/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: postgres
      containers:
        - name: postgres
          image: postgres:13
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: tmp
              name: data
