kubernetes/kubernetes/5-nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
      containers:
        - name: nextcloud
          image: nextcloud
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud
