kubernetes/kubernetes/5-nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
  labels:
    name: nextcloud
spec:
  rules:
    - host: nextcloud-olivier.intech.levitt.fr
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
